set (CMAKE_CXX_FLAGS -std=c++11)
include_directories ( inc )
aux_source_directory (src SOURCE_LIB)
add_library (dbutil STATIC ${SOURCE_LIB})

#if (USE_MYSQL)
#	set (DB_SRC_MYSQL "src/MyLibrary.cpp;src/MyConnection.cpp;src/MyResult.cpp;src/MyRow.cpp")
#endif (USE_MYSQL)
#if (USE_REDIS)
#	set (DB_SRC_REDIS "src/RedisCon.cpp")
#endif (USE_REDIS)
#add_library (dbutil STATIC "${DB_SRC_MYSQL};${USE_REDIS}")
